--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -151,7 +151,7 @@
     \resumeItemListStart
       \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the whole of government}
       \resumeItem{Adopted Jest unit testing for codebase, wrote 100\% code coverage unit tests, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
-      \resumeItem{Developed a serverless API that receives requests from FormSG webhook to automate task creation on Notion dashboard \& Telegram channel with the use of Plumber, increasing team and product manager productivity by 50\%}
+      \resumeItem{Enhanced team productivity through developing many automation tools, such as a serverless API that receives FormSG webhook requests and automates task creation on Notion dashboard \& Telegram channel, as well as a Health Monitoring Express webhook that periodically checks on the health of product microservices compiles reports to a Telegram channel and MongoDB store.}
       \resumeItem{Technologies: \textbf{Next.js, Node.js, Express.js, Django + Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
 
