--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -149,10 +149,10 @@
     {Central Provident Fund Board (CPFB)}{Jan. 2023 -- Present}
     {Software Engineer Intern}{Singapore}
     \resumeItemListStart
-      \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the whole of government}
+      \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, a tool that automates filling in of extensive government documents and contracts from inputs from various sources, for use across the whole of government}
       \resumeItem{Adopted Jest unit testing for codebase, wrote 100\% code coverage unit tests, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
-      \resumeItem{Enhanced team productivity through developing many automation tools, such as a serverless API that receives FormSG webhook requests and automates task creation on Notion dashboard \& Telegram channel, as well as a Health Monitoring Express webhook that periodically checks on the health of product microservices compiles reports to a Telegram channel and MongoDB store.}
-      \resumeItem{Technologies: \textbf{Next.js, Node.js, Express.js, Django + Python, AWS, GitLab, MongoDB, Jest}}
+      \resumeItem{Enhanced team productivity by developing automation tools, such as a serverless API to automate task creation to Notion and Telegram via FormSG webhooks and a health monitoring express webhook that tracks product microservice health, compiles reports, and integrates with Telegram and MongoDB.}
+      \resumeItem{Technologies: \textbf{Next.js, Node/Express, Python/Django, AWS, MongoDB, Jest}}
     \resumeItemListEnd
 
     \resumeSubheading
