--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -144,15 +144,23 @@
   %     \resumeItemListEnd
   %    \resumeSubHeadingListEnd
   %-------------------------------------------
+    \resumeSubheading
+    {Climate Impact X}{Feb. 2024 -- Present}
+    {Software Engineer}{Singapore}
+    \resumeItemListStart
+      \resumeItem{A joint venture by DBS, SGX, Standered Chartered \& Temasek, I worked on CIX's main platform, a global exchange for carbon credits, where I developed Java microservices for part of their global marketplace}
+      \resumeItem{Wrote JUnit test for codebase, increasing code coverage to 65\%, debugged and resolved critical issues on the platform}
+      \resumeItem{Technologies: \textbf{Java, Spring Boot, JUnit, PostgreSQL}}
+    \resumeItemListEnd
 
     \resumeSubheading
-    {Central Provident Fund Board (CPFB)}{Jan. 2023 -- Present}
+    {Central Provident Fund Board (CPFB)}{Jan. 2024 -- Feb. 2024}
     {Software Engineer Intern}{Singapore}
     \resumeItemListStart
       \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the whole of government}
-      \resumeItem{Adopted Jest unit testing for codebase, wrote 100\% code coverage unit tests, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
-      \resumeItem{Developed a serverless API that receives requests from FormSG webhook to automate task creation on Notion dashboard \& Telegram channel with the use of Plumber, increasing team and product manager productivity by 50\%}
-      \resumeItem{Technologies: \textbf{Next.js, Node.js, Express.js, Django + Python, AWS, GitLab, MongoDB, Jest}}
+      \resumeItem{Adopted Jest unit testing for codebase, garnering 80\% code coverage, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
+      \resumeItem{Developed tools to automate developer processes, such as a serverless API that auto-populates team Notion dashboard \& Telegram channel from product Contact form, and a health monitoring server that periodically checks on health of microservices. Increasing team and product manager productivity by 50\%}
+      \resumeItem{Technologies: \textbf{Next.js, Node/Express, Django/Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
 
     \resumeSubheading
