--- a/kyla_resume.tex
+++ b/kyla_resume.tex
@@ -170,8 +170,6 @@
       \resumeItemListStart
         \resumeItem{Greeted \& seated guests promptly, providing menus \& explaining specials}
         \resumeItem{Took \& entered orders accurately into POS system, ensuring timely service}
-        \resumeItem{Delivered food \& beverages to tables, checking for customer satisfaction}
-        \resumeItem{Maintained a clean \& organized dining area, ensuring complaince with health \& safety standards}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -181,7 +179,7 @@
         \resumeItem{Designed wireframes, prototypes, \& high-fidelity mockups using Figma}
         \resumeItem{Collaborated with developers \& stakeholders to implement design solutions, ensuring a seamless user experience}
         \resumeItem{Presented sample interfaces to clients}
-        \resumeItem{Designed the company's website \& proposal coverpages}
+        \resumeItem{Contributed to design changes to the company's website and proposal coverpages}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
