--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -148,9 +148,11 @@
     {Climate Impact X}{Feb. 2025 -- Present}
     {Software Engineer}{Singapore}
     \resumeItemListStart
-      \resumeItem{A joint venture by DBS, SGX, Standered Chartered \& Temasek, I worked on CIX's main platform, a global exchange for carbon credits, where I developed Java microservices for part of their global marketplace}
-      \resumeItem{Wrote JUnit test for codebase, increasing code coverage to 65\%, debugged and resolved critical issues on the platform}
-      \resumeItem{Technologies: \textbf{Java, Spring Boot, JUnit, PostgreSQL}}
+      \resumeItem{Worked on the engineering team at CIX, a global carbon credit exchange jointly held by DBS, SGX, Mizuho, Standard Chartered \& Temasek, where I built for \& maintained CIX's main platform}
+      \resumeItem{Enhanced platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend \& React Vite on the frontend, reducing system downtime by 40\%.}
+      \resumeItem{Collaborated with cross-functional teams to implement scalable solutions, ensuring long-term platform reliability and performance.}
+      \resumeItem{Conducted root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency.}
+      \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite, JUnit, PostgreSQL}}
     \resumeItemListEnd
 
     \resumeSubheading
@@ -158,7 +160,7 @@
     {Software Engineer Intern}{Singapore}
     \resumeItemListStart
       \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the whole of government}
-      \resumeItem{Adopted Jest unit testing for codebase, garnering 80\% code coverage, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
+      \resumeItem{Led the adoption of Jest unit testing for codebase, garnering 80\% code coverage, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
       \resumeItem{Developed tools to automate developer processes, such as a serverless API that auto-populates team Notion dashboard \& Telegram channel from product Contact form, and a health monitoring server that periodically checks on health of microservices. Increasing team and product manager productivity by 50\%}
       \resumeItem{Technologies: \textbf{Next.js, Node/Express, Django/Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
@@ -224,8 +226,8 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
       {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{Java}, \textbf{Go}, \textbf{SQL (PostgreSQL + Prisma)}, C/C++, HTML/CSS, R, PHP} \\
-      {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{Jest}, \textbf{JUnit}, \textbf{GSAP Animation Library}} \\
-      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, \textbf{MongoDB}, Figma} \\
+      {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{Jest}, \textbf{JUnit}, GSAP Animation Library} \\
+      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Azure}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, \textbf{MongoDB}, Figma} \\
      {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
