--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -148,10 +148,10 @@
     {Climate Impact X}{Feb. 2025 -- Present}
     {Software Engineer}{Singapore}
     \resumeItemListStart
-      \resumeItem{Worked on the engineering team at CIX, a global carbon credit exchange jointly held by DBS, SGX, Mizuho, Standard Chartered \& Temasek, where I built for \& maintained CIX's main platform}
-      \resumeItem{Enhanced platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend \& React Vite on the frontend, reducing system downtime by 40\%.}
-      \resumeItem{Collaborated with cross-functional teams to implement scalable solutions, ensuring long-term platform reliability and performance.}
-      \resumeItem{Conducted root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency.}
+      \resumeItem{I am on the engineering team at CIX, a global carbon credit exchange jointly held by DBS, SGX, Mizuho, Standard Chartered \& Temasek, where I build for \& maintain CIX's main platform}
+      \resumeItem{Work on enhancing platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend \& React Vite on the frontend.}
+      \resumeItem{Collaborate with cross-functional teams to implement scalable solutions, ensuring long-term platform reliability and performance.}
+      \resumeItem{Conduct root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency.}
       \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite, JUnit, PostgreSQL}}
     \resumeItemListEnd
 
@@ -159,9 +159,10 @@
     {Central Provident Fund Board (CPFB)}{Jan. 2025 -- Feb. 2025}
     {Software Engineer Intern}{Singapore}
     \resumeItemListStart
-      \resumeItem{Worked as part of the Business Incubator \& Accelerator team on \textbf{docCentral}, an internal management portal with a Microsoft Word Add-In that automates filling in of long documents and contracts for use across the whole of government}
-      \resumeItem{Led the adoption of Jest unit testing for codebase, garnering 80\% code coverage, debugged and resolved critical product issues, refactored code to improve maintainability, improving product stability and reliability by 100\%}
-      \resumeItem{Developed tools to automate developer processes, such as a serverless API that auto-populates team Notion dashboard \& Telegram channel from product Contact form, and a health monitoring server that periodically checks on health of microservices. Increasing team and product manager productivity by 50\%}
+      \resumeItem{Was on the Frontier Products Team within the Business Incubator \& Accelerator Department, where I worked on docCentral, a tool that automates filling in of extensive government documents and contracts from inputs from various sources, for use across the whole of government}
+      \resumeItem{Developed tools to boost team productivity, including a serverless API that auto-populates team Notion dashboard \& Telegram channel from product contact form, boosting team productivity by 100\%} 
+      \resumeItem{Built new features for the product, such as an admin page with a built-in dashboard, and an express microservice health monitoring function, and aided in debugging and fixing critical issues, improving product reliability \& stability by 40\%}
+      \resumeItem{Led the adoption of Jest unit testing on the codebase, and wrote unit tests, improving code coverage to 80\%}
       \resumeItem{Technologies: \textbf{Next.js, Node/Express, Django/Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
 
@@ -177,8 +178,8 @@
       {Schneider Electric}{Aug. 2022 -- Dec. 2022}
       {Data Analyst Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Led data migration and adoption of version-control with GitHub to enable improved workflow tracking \& data retrieval across 300 different SQL scripts}
-        \resumeItem{Automated complex SQL data-retrieval works by creating a script bank for use by entire Internal Audit team, resulting in a 30\% reduction in data processing time across the team.}
+        \resumeItem{Was part of the Internal Audit team, where I led data migration and adoption of version-control with GitHub to enable improved workflow tracking \& data retrieval across 300 different SQL scripts}
+        \resumeItem{Automated complex SQL data-retrieval works by creating a script bank for use by the entire team, resulting in a 30\% reduction in data processing time across the team.}
         \resumeItem{Developed machine learning algorithm to automate fraud detection for each internal audit cycle with an 80\% effectiveness}
         \resumeItem{Technologies: \textbf{SQL, Git, Python, Seaborn, Sci-kit Learn, Pandas}}
       \resumeItemListEnd
