--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -161,7 +161,7 @@
     \resumeItemListStart
       \resumeItem{Was on the Frontier Products Team within the Business Incubator \& Accelerator Department, where I worked on docCentral, a tool that automates filling in of extensive government documents and contracts from inputs from various sources, for use across the whole of government}
       \resumeItem{Developed tools to boost team productivity, including a serverless API that auto-populates team Notion dashboard \& Telegram channel from product contact form, boosting team productivity by 100\%} 
-      \resumeItem{Built new features for the product, such as an admin page with a built-in dashboard, and an express microservice health monitoring function, and aided in debugging and fixing critical issues, improving product reliability \& stability by 40\%}
+      \resumeItem{Built new features for the product, such as an admin page with a built-in dashboard, and an express product health monitoring microservice, and aided in debugging and fixing critical issues, improving product reliability \& stability by 40\%}
       \resumeItem{Led the adoption of Jest unit testing on the codebase, and wrote unit tests, improving code coverage to 80\%}
       \resumeItem{Technologies: \textbf{Next.js, Node/Express, Django/Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
