--- a/edgr_resume.tex
+++ b/edgr_resume.tex
@@ -149,10 +149,10 @@
     {Software Engineer}{Singapore}
     \resumeItemListStart
       \resumeItem{I am on the engineering team at CIX, a global carbon credit exchange jointly held by DBS, SGX, Mizuho, Standard Chartered \& Temasek, where I build for \& maintain CIX's main platform}
-      \resumeItem{Work on enhancing platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend \& React Vite on the frontend.}
-      \resumeItem{Collaborate with cross-functional teams to implement scalable solutions, ensuring long-term platform reliability and performance.}
+      \resumeItem{Work on enhancing platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend \& React, Vite \& TypeScript on the frontend.}
+      \resumeItem{Collaborate with QA, App Support Engineers, and Business Analysts to troubleshoot bugs, clarify feature requirements, improve UX and implement scalable solutions, ensuring long-term platform reliability and performance.}
       \resumeItem{Conduct root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency.}
-      \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite, JUnit, PostgreSQL}}
+      \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite/TypeScript, JUnit, PostgreSQL, MongoDB}}
     \resumeItemListEnd
 
     \resumeSubheading
