changed naming convention

--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -148,8 +148,8 @@
     {Climate Impact X}{Feb. 2025 -- Present}
     {Software Engineer}{Singapore}
     \resumeItemListStart
-      \resumeItem{I am on the engineering team at CIX, a global carbon credit exchange jointly held by DBS, SGX, Mizuho, Standard Chartered \& Temasek, where I build for \& maintain CIX's main platform}
-      \resumeItem{Work on enhancing platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend \& React, Vite \& TypeScript on the frontend.}
+      \resumeItem{I am on the engineering team at CIX, a global carbon credit exchange jointly held by DBS, SGX, Mizuho, Standard Chartered and Temasek, where I build for and maintain CIX's main platform}
+      \resumeItem{Work on enhancing platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend and React, Vite and TypeScript on the frontend.}
       \resumeItem{Collaborate with QA, App Support Engineers, and Business Analysts to troubleshoot bugs, clarify feature requirements, improve UX and implement scalable solutions, ensuring long-term platform reliability and performance.}
       \resumeItem{Conduct root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency.}
       \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite/TypeScript, JUnit, PostgreSQL, MongoDB}}
@@ -160,8 +160,8 @@
     {Software Engineer Intern}{Singapore}
     \resumeItemListStart
       \resumeItem{Was on the Frontier Products Team within the Business Incubator \& Accelerator Department, where I worked on docCentral, a tool that automates filling in of extensive government documents and contracts from inputs from various sources, for use across the whole of government}
-      \resumeItem{Developed tools to boost team productivity, including a serverless API that auto-populates team Notion dashboard \& Telegram channel from product contact form, boosting team productivity by 100\%} 
-      \resumeItem{Built new features for the product, such as an admin page with a built-in dashboard, and an express product health monitoring microservice, and aided in debugging and fixing critical issues, improving product reliability \& stability by 40\%}
+      \resumeItem{Developed tools to boost team productivity, including a serverless API that auto-populates team Notion dashboard and Telegram channel from product contact form, boosting team productivity by 100\%} 
+      \resumeItem{Built new features for the product, such as an admin page with a built-in dashboard, and an express product health monitoring microservice, and aided in debugging and fixing critical issues, improving product reliability and stability by 40\%}
       \resumeItem{Led the adoption of Jest unit testing on the codebase, and wrote unit tests, improving code coverage to 80\%}
       \resumeItem{Technologies: \textbf{Next.js, Node/Express, Django/Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
@@ -170,7 +170,7 @@
       {Government Technology Agency (GovTech)}{Jan. 2023}
       {Software Engineer Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Worked on the Tech iOSH Refresh Project aimed at providing a more seamless portal for more than 2000 safety and health professionals, where I developed UI components, resulting in a 30\% reduction in code duplication \& a 25\% increase in usability scores from user testing sessions}
+        \resumeItem{Worked on the Tech iOSH Refresh Project aimed at providing a more seamless portal for more than 2000 safety and health professionals, where I developed UI components, resulting in a 30\% reduction in code duplication and a 25\% increase in usability scores from user testing sessions}
         \resumeItem{Technologies: \textbf{React, Figma, HTML/CSS}}
       \resumeItemListEnd
 
@@ -178,7 +178,7 @@
       {Schneider Electric}{Aug. 2022 -- Dec. 2022}
       {Data Analyst Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Was part of the Internal Audit team, where I led data migration and adoption of version-control with GitHub to enable improved workflow tracking \& data retrieval across 300 different SQL scripts}
+        \resumeItem{Was part of the Internal Audit team, where I led data migration and adoption of version-control with GitHub to enable improved workflow tracking and data retrieval across 300 different SQL scripts}
         \resumeItem{Automated complex SQL data-retrieval works by creating a script bank for use by the entire team, resulting in a 30\% reduction in data processing time across the team.}
         \resumeItem{Developed machine learning algorithm to automate fraud detection for each internal audit cycle with an 80\% effectiveness}
         \resumeItem{Technologies: \textbf{SQL, Git, Python, Seaborn, Sci-kit Learn, Pandas}}
@@ -223,7 +223,7 @@
 
 
 %-----------PROGRAMMING SKILLS-----------
-\section{Technical Skills \& Interests}
+\section{Technical Skills and Interests}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
       {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{Java}, \textbf{Go}, \textbf{SQL (PostgreSQL + Prisma)}, C/C++, HTML/CSS, R, PHP} \\
