--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -152,7 +152,7 @@
       \resumeItem{Work on enhancing platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend and React, Vite and TypeScript on the frontend.}
       \resumeItem{Collaborate with QA, App Support Engineers, and Business Analysts to troubleshoot bugs, clarify feature requirements, improve UX and implement scalable solutions, ensuring long-term platform reliability and performance.}
       \resumeItem{Conduct root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency.}
-      \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite/TypeScript, JUnit, PostgreSQL, MongoDB}}
+      \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite/TypeScript, JUnit, PostgreSQL, MongoDB, Azure}}
     \resumeItemListEnd
 
     \resumeSubheading
