--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -148,10 +148,13 @@
     {Climate Impact X}{Feb. 2025 -- Present}
     {Software Engineer}{Singapore}
     \resumeItemListStart
-      \resumeItem{I am on the engineering team at CIX, a global carbon credit exchange jointly held by DBS, SGX, Mizuho, Standard Chartered and Temasek, where I build for and maintain CIX's main platform}
-      \resumeItem{Work on enhancing platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with both Java Spring Boot on the backend and React, Vite and TypeScript on the frontend.}
-      \resumeItem{Collaborate with QA, App Support Engineers, and Business Analysts to troubleshoot bugs, clarify feature requirements, improve UX and implement scalable solutions, ensuring long-term platform reliability and performance.}
-      \resumeItem{Conduct root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency.}
+      \resumeItem{I am on the engineering team at CIX, a global carbon credit solutions provider venture jointly held by DBS, SGX, Mizuho, Standard Chartered and Temasek, where I build for and maintain CIX's main platform}
+      \resumeItem{Enhanced platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with on both the frontend and backend}
+      \resumeItem{Collaborated with QA, App Support Engineers, and Business Analysts to troubleshoot bugs, clarify feature requirements, improve UX and implement scalable solutions, ensuring long-term platform reliability and performance}
+      \resumeItem{Conducted root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency}
+      \resumeItem{Reduced server load by 62\% through asynchronous processing and thread pool management, leading to a 40\% decrease in infrastructure costs}
+      \resumeItem{Developed and deployed new API endpoints for real-time carbon credit pricing integrated with market data providers, as well as aggregate data-fetching for both client-facing features and developer utilisations}
+      \resumeItem{Introduced and onboarded SonarQube to aid in identifying and addressing code smells and potential bugs, improving code maintainability}
       \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite/TypeScript, JUnit, PostgreSQL, MongoDB, Azure}}
     \resumeItemListEnd
 
@@ -162,7 +165,7 @@
       \resumeItem{Was on the Frontier Products Team within the Business Incubator \& Accelerator Department, where I worked on docCentral, a tool that automates filling in of extensive government documents and contracts from inputs from various sources, for use across the whole of government}
       \resumeItem{Developed tools to boost team productivity, including a serverless API that auto-populates team Notion dashboard and Telegram channel from product contact form, boosting team productivity by 100\%} 
       \resumeItem{Built new features for the product, such as an admin page with a built-in dashboard, and an express product health monitoring microservice, and aided in debugging and fixing critical issues, improving product reliability and stability by 40\%}
-      \resumeItem{Led the adoption of Jest unit testing on the codebase, and wrote unit tests, improving code coverage to 80\%}
+      \resumeItem{Led the adoption of Jest unit testing on the codebase, and wrote unit tests, improving code coverage to 60\%}
       \resumeItem{Technologies: \textbf{Next.js, Node/Express, Django/Python, AWS, GitLab, MongoDB, Jest}}
     \resumeItemListEnd
 
@@ -186,7 +189,7 @@
 
       \resumeSubheading
       {Accenture}{June. 2022 -- Aug. 2022}
-      {Software Development Engineer in Test Intern}{Singapore}
+      {Summer Analyst (Technology)}{Singapore}
       \resumeItemListStart
         \resumeItem{Developed testing tools and performed UAT Testing for iHiS Billing Transform project, aimed at digitally transforming the nationwide healthcare billing solution, where I used Python and SOAP APIs to test the platform and develop testing tools and scripts. I identified over 60 critical defects and reduced post-release issues by 30\%}
         \resumeItem{Technologies: \textbf{Python, SOAP APIs}}
@@ -227,7 +230,7 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
       {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{Java}, \textbf{Go}, \textbf{SQL (PostgreSQL + Prisma)}, C/C++, HTML/CSS, R, PHP} \\
-      {Frameworks}{: \textbf{Next.js}, \textbf{React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{Jest}, \textbf{JUnit}, GSAP Animation Library} \\
+      {Frameworks}{: \textbf{Next.js/React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{Jest/Vitest}, \textbf{JUnit}, GSAP Animation Library} \\
       {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Azure}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, \textbf{MongoDB}, Figma} \\
      {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
      {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
