--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -152,9 +152,9 @@
       \resumeItem{Enhanced platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with on both the frontend and backend}
       \resumeItem{Collaborated with QA, App Support Engineers, and Business Analysts to troubleshoot bugs, clarify feature requirements, improve UX and implement scalable solutions, ensuring long-term platform reliability and performance}
       \resumeItem{Conducted root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency}
-      \resumeItem{Reduced server load by 62\% through asynchronous processing and thread pool management, leading to a 40\% decrease in infrastructure costs}
-      \resumeItem{Developed and deployed new API endpoints for real-time carbon credit pricing integrated with market data providers, as well as aggregate data-fetching for both client-facing features and developer utilisations}
-      \resumeItem{Introduced and onboarded SonarQube to aid in identifying and addressing code smells and potential bugs, improving code maintainability}
+  %    \resumeItem{Reduced server load by 62\% through asynchronous processing and thread pool management, leading to a 40\% decrease in infrastructure costs}
+  %    \resumeItem{Developed and deployed new API endpoints for real-time carbon credit pricing integrated with market data providers, as well as aggregate data-fetching for both client-facing features and developer utilisations}
+  %    \resumeItem{Introduced and onboarded SonarQube to aid in identifying and addressing code smells and potential bugs, improving code maintainability}
       \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite/TypeScript, JUnit, PostgreSQL, MongoDB, Azure}}
     \resumeItemListEnd
 
