--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -181,9 +181,7 @@
       {Schneider Electric}{Aug. 2022 -- Dec. 2022}
       {Data Analyst Intern}{Singapore}
       \resumeItemListStart
-        \resumeItem{Was part of the Internal Audit team, where I led data migration and adoption of version-control with GitHub to enable improved workflow tracking and data retrieval across 300 different SQL scripts}
-        \resumeItem{Automated complex SQL data-retrieval works by creating a script bank for use by the entire team, resulting in a 30\% reduction in data processing time across the team.}
-        \resumeItem{Developed machine learning algorithm to automate fraud detection for each internal audit cycle with an 80\% effectiveness}
+        \resumeItem{Enhanced internal audit team efficiency and accuracy by leading data migration, implementing version control with GitHub, automating SQL data retrieval (reducing processing time by 30\%), and developing a machine learning algorithm for 80\% effective fraud detection}
         \resumeItem{Technologies: \textbf{SQL, Git, Python, Seaborn, Sci-kit Learn, Pandas}}
       \resumeItemListEnd
 
@@ -230,10 +228,10 @@
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
       {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{Java}, \textbf{Go}, \textbf{SQL (PostgreSQL + Prisma)}, C/C++, HTML/CSS, R, PHP} \\
-      {Frameworks}{: \textbf{Next.js/React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, \textbf{Jest/Vitest}, \textbf{JUnit}, GSAP Animation Library} \\
-      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Azure}, \textbf{Webpack}, \textbf{Supabase}, \textbf{Vercel}, \textbf{MongoDB}, Figma} \\
-     {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
-     {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
+      {Frameworks}{: \textbf{Next.js/React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, Jest/Vitest, JUnit, GSAP Animation Library} \\
+      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Azure}, \textbf{Webpack}, \textbf{MongoDB}, Supabase, Vercel, Figma} \\
+      {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
+      {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
  \end{itemize}
 
