--- a/kyla_resume.tex
+++ b/kyla_resume.tex
@@ -217,6 +217,7 @@
     \small{\item{
       {\textbf{Programming}}{: Python} \\
       {\textbf{Graphic Design}}{: Canva, Figma} \\
+      {\textbf{Office Tools}}{: Excel} \\
       {\textbf{Personal Skills}}{: Project Management, Problem Solving, Detail-Oriented, Team Work, Customer Service} \\
       {\textbf{Interests}}{: Dance, Coffee}
     }}
