--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -215,7 +215,7 @@
             \resumeItem{User authentication with JSON Web Tokens, as well as full stack deployment using Railway for the backend and Vercel for frontends}
           \resumeItemListEnd
         \resumeProjectHeading
-        {\textbf{\href{https://safarinexus.github.io/edgr-odinprojects/}{TOP Projects}} $|$ \emph{React, PostgreSQL, Prisma, Node.js, Express.js, Webpack, RESTful API}}{Feb. 2024 -- Sept. 2024}
+        {\textbf{\href{https://safarinexus.github.io/edgr-odinprojects/}{TOP Projects}} $|$ \emph{React, PostgreSQL, Prisma, Node.js, Express.js, Webpack, REST API}}{Feb. 2024 -- Sept. 2024}
           \resumeItemListStart
           \resumeItem{A collection full-stack projects developed in my undertaking of "The Odin Project" where I self-taught full-stack development}
           \resumeItem{Projects include frontend webs app such as a weather app and React shopping page, and full-stack web apps such as an inventory site and a RESTful blog API. All built from scratch.}
@@ -229,7 +229,7 @@
     \small{\item{
       {Languages}{: \textbf{TypeScript/JavaScript}, \textbf{Node.js}, \textbf{Python}, \textbf{Java}, \textbf{Go}, \textbf{SQL (PostgreSQL + Prisma)}, C/C++, HTML/CSS, R, PHP} \\
       {Frameworks}{: \textbf{Next.js/React.js}, \textbf{Express.js}, \textbf{Spring Boot}, \textbf{TailwindCSS}, Jest/Vitest, JUnit, GSAP Animation Library} \\
-      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Azure}, \textbf{Webpack}, \textbf{MongoDB}, Supabase, Vercel, Figma} \\
+      {Developer Tools}{: \textbf{Git/GitHub/GitLab}, \textbf{AWS}, \textbf{Azure}, \textbf{Webpack}, \textbf{MongoDB}, \textbf{Docker}, Supabase, Vercel, Figma} \\
       {Libraries}{: pandas, NumPy, Matplotlib, seaborn, sci-kit learn} \\
       {Interests}{: I’m a computer nerd, I’m a coffee nerd, I’m a mechanical keyboard nerd, I’m a book nerd, I’m a film nerd}
     }}
