--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -241,7 +241,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Singapore Management University}{Aug. 2020 -- Dec. 2024}
-      {Bachelor of Accountancy with Second Major in Information Systems}{Singapore}
+      {Bachelor of Accountancy}{Singapore}
       \resumeItemListStart
         \resumeItem{\textbf {Relevant Coursework:} Web App Development, Computational Thinking (Data Structures \& Algorithms), Software Engineering, Data Management}
         \resumeItem{\textbf {Semester Abroad/Exchange:} University of St. Gallen, Switzerland (Fall 2023)}
