--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -152,9 +152,10 @@
       \resumeItem{Enhance platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with on both the frontend and backend}
       \resumeItem{Collaborate with QA, App Support Engineers, and Business Analysts to troubleshoot bugs and clarify feature requirements to ensure long-term platform reliability and performance}
       \resumeItem{Conducted root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency}
-      \resumeItem{Reduced server load by 62\% through asynchronous processing and thread pool management, leading to a 40\% decrease in infrastructure costs}
-      \resumeItem{Developed and deployed new API endpoints for real-time carbon credit pricing integrated with market data providers, as well as aggregate data-fetching for both client-facing features and developer utilisations}
-    % \resumeItem{Led a team of 3 developers to build a new microservice} 
+      \resumeItem{Designed, developed, and maintained revenue-generating features for the CIX platform, utilizing React, Java and Azure}
+    %  \resumeItem{Reduced server load by 62\% through asynchronous processing and thread pool management, leading to a 40\% decrease in infrastructure costs}
+    %  \resumeItem{Developed and deployed new API endpoints for real-time carbon credit pricing integrated with market data providers, as well as aggregate data-fetching for both client-facing features and developer utilisations}
+    %  \resumeItem{Led a team of 3 developers to build a new microservice} 
       \resumeItem{Technologies: \textbf{Java/Spring Boot, React/Vite/TypeScript, JUnit, PostgreSQL, MongoDB, Azure}}
     \resumeItemListEnd
 
@@ -241,7 +242,7 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Singapore Management University}{Aug. 2020 -- Dec. 2024}
-      {Bachelor of Accountancy}{Singapore}
+      {Bachelor of Accountancy with Second Major in Computer Science}{Singapore}
       \resumeItemListStart
         \resumeItem{\textbf {Relevant Coursework:} Web App Development, Computational Thinking (Data Structures \& Algorithms), Software Engineering, Data Management}
         \resumeItem{\textbf {Semester Abroad/Exchange:} University of St. Gallen, Switzerland (Fall 2023)}
