--- a/edgr-resume.tex
+++ b/edgr-resume.tex
@@ -148,11 +148,10 @@
     {Climate Impact X}{Feb. 2025 -- Present}
     {Software Engineer}{Singapore}
     \resumeItemListStart
-      \resumeItem{Build features on the frontend and backend for CIX's main platform, a global carbon credit solutions provider jointly held by Mizuho, Standard Chartered, DBS, SGX and Temasek}
+      \resumeItem{I Build features on the frontend and backend for CIX's main platform, a global carbon credit solutions provider jointly held by Mizuho, Standard Chartered, DBS, SGX and Temasek}
       \resumeItem{Enhance platform stability by identifying, troubleshooting, and resolving critical bugs and infrastructure issues with on both the frontend and backend}
       \resumeItem{Collaborate with QA, App Support Engineers, and Business Analysts to troubleshoot bugs and clarify feature requirements to ensure long-term platform reliability and performance}
       \resumeItem{Conducted root cause analysis and implemented preventive measures to minimize recurring issues, improving overall system efficiency}
-      \resumeItem{Designed, developed, and maintained revenue-generating features for the CIX platform, utilizing React, Java and Azure}
     %  \resumeItem{Reduced server load by 62\% through asynchronous processing and thread pool management, leading to a 40\% decrease in infrastructure costs}
     %  \resumeItem{Developed and deployed new API endpoints for real-time carbon credit pricing integrated with market data providers, as well as aggregate data-fetching for both client-facing features and developer utilisations}
     %  \resumeItem{Led a team of 3 developers to build a new microservice} 
